Fixed alignment of nav bar title as much as I could
Wanted to make it so that the nav bar aligns with the edges of the main content, but couldn't figure out how to do that. So, I moved it to be at least wider than the content instead of narrower.

--- a/_sass/blog/_base.scss
+++ b/_sass/blog/_base.scss
@@ -2,8 +2,9 @@
  * Wrapper
  */
 .wrapper {
-  max-width: -webkit-calc(#{$navbar-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$navbar-width} - (#{$spacing-unit} * 2));
+    max-width: 64em;
+  // max-width: -webkit-calc(#{$navbar-width} - (#{$spacing-unit} * 2));
+  // max-width:         calc(#{$navbar-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
